# napari-methodsj2

./: Feb02.json  MJ2_structure_file_testing_.json  README.md  av1_hardware_file_clean_format.json  bioformat.py  bioformat2.py  demo.py  demoApr22.py  demoAug14.py  demoJuly4.py  demoJun28.py  demo_image_phalloidin[1764].tif  napari-methods_v0-0-1.py  output.xml  pybioformats.py  read_params.py  test3.py  test4.py  widget_params.json  xmlTags.txt
napari-methods/: setup.cfg
napari-methods/napari_methods/: __init__.py  napari.yaml
napari-methods/napari_methods.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
previous_versions/: MJ2_structure_file_testing_.json  Output.json  README.md  combobox_change.py  demoAug14.py  demoJuly5.py  methodsJ2_demo.py  methodsJ2demo2.py  napari-methods_v0-0-1.py  pybioformats.py  test4.py  test9.py
