[metadata]
name = napari-methods
version = 0.0.1
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    
[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
	imageio
    aicsimageio
    numpy==1.21.6
	napari>=0.4.8
	napari-plugin-engine>=0.1.9
    PyQt5
	qtpy

[options.entry_points]
napari.manifest =
    napari-methods = napari_methods:napari.yaml